reorganised arch, added UpdateFragment.kt, added classpath in build.gradle, made User.kt parcelable, added setArgs function, added updateData function

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id  'kotlin-kapt'
+    // For @Parcelize
+    id 'kotlin-parcelize'
+    // For safeargs and DirectionClasses
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
